# ulsu_students_project

./: .gitignore  Makefile  README.md  docker-compose.yml  main.py  requirements.txt  stopwords.json
nginx/: .htpasswd  Dockerfile  service.conf  yandex_75747403c231c335.html
server/: .pylintrc  Dockerfile  RandForestforDetectProgLang.joblib  VKR_1.txt  VKR_2.txt  VKR_3.txt  corpus_lang_prog.txt  file.csv  mypy.ini  pyproject.toml  requirements.txt  stop_words.txt
server/mysite/: settings.py  urls.py
server/mysite/templates/: base.html
server/nlp/: NLP_1.py  admin.py  algorithm.py  apps.py  forms.py  models.py  ner_rus_bert.json  requirements.txt  serializers.py  signals.py  urls.py  utils.py  views.py
server/nlp/management/commands/: govno.py  load_this.py
server/nlp/migrations/: 0001_initial.py  0002_auto_20210404_2022.py  0003_delete_student.py  0004_delete_document.py  0005_document_student.py  0006_auto_20210413_1804.py  0007_auto_20210417_0546.py  0008_auto_20210417_0554.py  0009_auto_20210419_1304.py  0010_auto_20210419_1425.py  0011_auto_20210419_1430.py
server/nlp/templates/: show.html  upload.html
server/nlp/Проект/: ner_rus_bert.json  nlp.py  stop_words.txt
server/web/: admin.py  models.py  urls.py
server/web/migrations/: 0001_initial.py
