[tool.poetry]
name = "knauf"
version = "0.1.0"
description = "Construction calculator"
authors = ["bro.agency"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.1"
psycopg2-binary = "^2.7"
raven = "^6.10"
dj-database-url = "^0.5.0"
django_redis = "^4.10"
django-filer = "^1.4"
django-solo = "^1.1"
openpyxl = "^2.6"
funcy = "^1.11"
gunicorn = "^19.9"
django-admin-sortable2 = "^0.7.0"
celery = "^4.3"
djangorestframework = "^3.9"
django-cors-headers = "^2.5"
deepdiff = "^4.0"
django-nested-admin = "^3.2"
django-cacheops = "^4.1"
django-autocomplete-light = "^3.3"
coverage = "^4.5"
ipython = "^7.3"
mypy = "^0.670.0"
prospector = "^1.1"
django-debug-toolbar = "^1.11"
drf-yasg = "^1.15"
ipdb = "^0.12.0"
jinja2 = "^2.10"
weasyprint = '^47'
django-json-widget = "^0.2.0"
django-csrf-view = "^0.1.0"
packaging = "^19.0"
jet_django = "^0.8.9"
django-anymail = "^7.0"
python-docx = "^0.8.10"
pytesseract = "^0.3.7"
opencv-python = "^4.5.1"
deeppavlov = "^0.14.1"
natasha = "^1.4.0"
textract = "^1.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
